# DecorativeUI

./: .clang-tidy  .cmake-format.yaml  .editorconfig  .gitattributes  .gitignore  .pre-commit-config-test.yaml  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  build-command.bat  build.bat  configure.bat  configure.sh  mkdocs.yml  requirements.txt  setup-dev.bat  setup-dev.sh  tasks.py  vcpkg.json
example/: CMakeLists.txt  README.md  main.cpp
example/components/: Chart.cpp  Chart.hpp  DataTable.cpp  DataTable.hpp  EnhancedComponents.cpp  EnhancedComponents.hpp  NavigationBar.cpp  NavigationBar.hpp  SearchBox.cpp  SearchBox.hpp  StatusIndicator.cpp  StatusIndicator.hpp
example/showcase/: AnimationDemo.cpp  AnimationDemo.hpp  CommandDemo.cpp  CommandDemo.hpp  ComponentGallery.cpp  ComponentGallery.hpp  PerformanceMonitor.cpp  PerformanceMonitor.hpp  ShowcaseApp.cpp  ShowcaseApp.hpp  StateDemo.cpp  StateDemo.hpp  ThemeManager.cpp  ThemeManager.hpp
example/utils/: ExampleHelpers.cpp  ExampleHelpers.hpp  PerformanceProfiler.cpp  PerformanceProfiler.hpp  SampleDataGenerator.cpp  SampleDataGenerator.hpp
examples/: CMakeLists.txt  README.md
examples/01-getting-started/: CMakeLists.txt  README.md
examples/02-fundamentals/: CMakeLists.txt  README.md
examples/03-components/: CMakeLists.txt  README.md
examples/04-advanced-components/: CMakeLists.txt
examples/04-advanced-features/: CMakeLists.txt  README.md
examples/05-command-system/: CMakeLists.txt  README.md
examples/06-applications/: CMakeLists.txt  README.md
examples/advanced/: 26_command_system.cpp  27_command_example.cpp  28_advanced_example.cpp  29_comprehensive_example.cpp  30_command_ui_builder.cpp  31_integration_example.cpp  36_todo_app.cpp  37_form_example.cpp  38_settings_example.cpp  39_dashboard_example.cpp  CMakeLists.txt  README.md
examples/basic/: 01_hello_world.cpp  02_json_ui_loading.cpp  03_simple_state.cpp  04_basic_hot_reload.cpp  05_event_handling.cpp  06_counter_app.cpp  08_command_basics.cpp  08_command_basics_simple.cpp  16_reactive_state.cpp  21_file_watching.cpp  22_hot_reload_example.cpp  CMakeLists.txt  README.md
examples/command/: CMakeLists.txt  CommandUIExample.cpp  CommandUIExample.hpp  IntegrationExample.hpp  README.md  command_builder_example.cpp  integration_main.cpp  json_command_example.cpp  main.cpp  state_integration_example.cpp
examples/components/: 06_basic_components.cpp  07_input_components.cpp  08_comprehensive_components.cpp  09_enhanced_components.cpp  10_new_components.cpp  CMakeLists.txt  README.md
examples/enhanced-components/: CMakeLists.txt  README.md  enhanced-components-demo.cpp
examples/resources/: mixed_components_example.json
examples/templates/: README.md
src/Animation/: AnimationEngine.cpp  AnimationEngine.hpp  CMakeLists.txt  README.md
src/Components/: Button.cpp  Button.hpp  CMakeLists.txt  Calendar.cpp  Calendar.hpp  CheckBox.cpp  CheckBox.hpp  ColorDialog.cpp  ColorDialog.hpp  ComboBox.cpp  ComboBox.hpp  Container.cpp  Container.hpp  DateTimeEdit.cpp  DateTimeEdit.hpp  Dial.cpp  Dial.hpp  DockWidget.cpp  DockWidget.hpp  DoubleSpinBox.cpp  DoubleSpinBox.hpp  FileDialog.cpp  FileDialog.hpp  FontDialog.cpp  FontDialog.hpp  Frame.cpp  Frame.hpp  GroupBox.cpp  GroupBox.hpp  LCDNumber.cpp  LCDNumber.hpp  Label.cpp  Label.hpp  Layout.cpp  Layout.hpp  LineEdit.cpp  LineEdit.hpp  ListView.cpp  ListView.hpp  MenuBar.hpp  (+32 more)
src/Core/: Animation.hpp  CMakeLists.txt  CacheManager.cpp  CacheManager.hpp  CommonHelpers.cpp  CommonHelpers.hpp  ComponentUtils.hpp  Concepts.hpp  ConditionalRendering.cpp  ConditionalRendering.hpp  DeclarativeBuilder.cpp  DeclarativeBuilder.hpp  ErrorBoundary.cpp  ErrorBoundary.hpp  ErrorHandling.cpp  ErrorHandling.hpp  Lifecycle.cpp  Lifecycle.hpp  MemoryManager.cpp  MemoryManager.hpp  ParallelProcessor.cpp  ParallelProcessor.hpp  README.md  SmartPointers.hpp  Theme.hpp  UIElement.cpp  UIElement.hpp  Validation.hpp
src/Examples/: CMakeLists.txt  README.md  advanced_command_demo.cpp  advanced_example.cpp  comprehensive_example.cpp  comprehensive_example_new.cpp  dashboard_example.cpp  form_example.cpp  hot_reload_example.cpp  main.cpp  settings_example.cpp
src/Tests/: CMakeLists.txt  COMPREHENSIVE_TEST_GUIDE.md  README.md  test_builtin_commands.cpp  test_command_integration.cpp  test_command_system.cpp  test_components.cpp  test_conditional_rendering.cpp  test_conditional_rendering_enhanced.cpp  test_core.cpp  test_error_boundary.cpp  test_error_boundary_enhanced.cpp  test_hot_reload.cpp  test_integration.cpp  test_integration_comprehensive.cpp  test_json.cpp  test_lifecycle.cpp  test_lifecycle_enhanced.cpp  test_performance_benchmarks.cpp  test_property_binding.cpp  test_property_binding_template.cpp  test_state_manager.cpp
tests/: CMakeLists.txt  ComponentTests.cpp  README.md  TESTING_GUIDE.md  TEST_COVERAGE_REPORT.md
tests/command/: CMakeLists.txt  CommandSystemTest.cpp  test_builtin_commands.cpp  test_command_binding.cpp  test_command_builder.cpp  test_command_core.cpp  test_command_events.cpp  test_command_performance.cpp  test_command_state.cpp  test_component_commands.cpp  test_component_system_adapter.cpp  test_expanded_component_commands.cpp  test_integration_manager.cpp  test_json_command_loader.cpp  test_missing_implementations.cpp  test_mvc_integration.cpp  test_state_manager_adapter.cpp  test_uielement_adapter.cpp  test_widget_mapper.cpp
tests/integration/: CMakeLists.txt  test_end_to_end_workflows.cpp  test_error_handling_integration.cpp
tests/performance/: CMakeLists.txt  test_component_performance.cpp
tests/unit/: CMakeLists.txt  CacheManagerTest.cpp  README.md  README_DEBUG_BINDING_TESTS.md  README_NEW_TESTS.md  test_accessibility.cpp  test_animation_system.cpp  test_bottleneck_detector_widget.cpp  test_component_utils.cpp  test_components.cpp  test_container_components.cpp  test_core.cpp  test_core_advanced.cpp  test_debug_components.cmake  test_json.cpp  (+22 more)
(+262 files in other folders)
